--- a/src/component/countries/countries.css
+++ b/src/component/countries/countries.css
@@ -4,3 +4,11 @@
     margin: 20px;
     padding: 20px;
 }
+.visite_country{
+    background-color: rgb(0, 222, 247);
+    color: #000;
+}
+.button_color{
+    background-color: greenyellow;
+    
+}
